# re-dbt

snowflake/: .gitignore  .user.yml  Dockerfile  README.md  dbt_project.yml  docker-compose.yml  packages.yml  profiles.yml  pyproject.toml  services.py
snowflake/macros/: warehouse.sql
snowflake/models/mart/: mart_football_info.sql  schema.yml
snowflake/models/staging/: schema.yml  stg_football_matches.sql  stg_global_rankings.sql
